# agri-curve

./: .gitignore  Dockerfile  README.md  agri_curve.py  argocd-application.yaml  claude_plan.md  data_exploration.ipynb  deployment.yaml  live.yaml  minio-deployment.yml  pyproject.toml  requirements.txt
config/: __init__.py  config.py
src/nodes/: datagen.py  preprocessing.py
src/pipelines/: datagen.py
